fix: add horizontal scroll to code snippets

--- a/static/css/modules/reset.css
+++ b/static/css/modules/reset.css
@@ -73,3 +73,9 @@ select {
 		scroll-behavior: auto !important;
 	}
 }
+
+pre {
+	/* white-space: pre-wrap; */
+	/* word-wrap: break-word; */
+	overflow: auto;
+}
